--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,8 @@
     --btn-border: 1px solid black;
     --btn-hover-clr: lightgrey;
     --base-fs: 2rem;
+    --base-green-clr: green;
+    --base-error-clr: red;
 }
 body {
     background-color: bisque;
@@ -37,7 +39,6 @@ footer{
 
 .main > *{
     background-color: aliceblue;
-    
 
 }
 .container{
@@ -53,11 +54,30 @@ footer{
     border-radius: 20px;
     
 }
-.grid-items{
+.grid__items{
     border: var(--btn-border);
     font-size: var(--base-fs);
+    text-align: center;
+    position: relative;
+
 }
-.wrkng-area{
+.grid__items > *{
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.grid__items:not(.wrkng--area, .clear, .delete, .equals){
+    background-color: var(--btn-hover-clr);
+}
+.container{
+    background-color: grey;
+}
+.container > .wrkng--area{
+    background-color: white;
+}
+.wrkng--area{
     grid-area: 1/1/3/-1;
 }
 .seven{
@@ -88,14 +108,21 @@ footer{
     grid-area: 6/1/7/2 ;
 }
 .zero{
-    grid-area: 7/1/8/2;
-}
-.clear{
-    grid-area: 3/1/4/3;
-}
-.delete{
-    grid-area:3/3/4/5 ;
+    grid-area: -1/3/-2/4;
 }
 .addition{
     grid-area: -1/-1/-2/-2;
+}
+.clear{
+    grid-area: 3/1/4/3;
+    background-color: var(--base-error-clr);
+}
+.delete{
+    grid-area:3/3/4/5 ;
+    background-color: var(--base-error-clr);
+}
+
+.equals{
+    grid-area: -1/1/-2/3 ;
+    background-color: var(--base-green-clr);
 }
