--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,13 @@ footer{
     bottom: 0;
     width: 100%;
 }
+p{
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 .main{
     display: flex;
     position: relative;
@@ -65,6 +72,17 @@ footer{
     border-radius: var(--large-br);
     
 }
+
+.wrkng--area__display-one, .wrkng--area__display-two{
+    position: absolute;
+    text-align: end;
+    width: 100%;
+    height: 50%;
+    vertical-align: bottom;
+}
+.wrkng--area__display-one{
+    bottom: 0;
+}
 .grid__items{
     border: var(--btn-border);
     font-size: calc(var(--base-fs)* 2);
@@ -73,13 +91,7 @@ footer{
     position: relative;
 
 }
-.grid__items > *{
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
+
 .grid__items:not(.wrkng--area, .clear, .equals){
     background-color: var(--btn-lightgrey-clr);
     border-radius: calc(var(--large-br));
@@ -111,10 +123,8 @@ footer{
     background-color: grey;
 }
 .wrkng--area{
-    background-color: white;
-}
-.wrkng--area{
     grid-area: 1/1/3/-1;
+    background-color: white;
 }
 .seven{
     grid-area: 4/3/5/4;
