--- a/styles.css
+++ b/styles.css
@@ -42,13 +42,7 @@ footer{
     bottom: 0;
     width: 100%;
 }
-p{
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
+
 .main{
     display: flex;
     position: relative;
@@ -78,13 +72,15 @@ p{
     text-align: end;
     width: 100%;
     height: 50%;
-    vertical-align: bottom;
     overflow: auto;
 }
 .wrkng--area__display-one{
     bottom: 0;
 }
 .grid__items{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border: var(--btn-border);
     font-size: calc(var(--base-fs)* 2);
     text-align: var(--text-align);
